[awscurl] Allows config json expression for custom token output format
Change-Id: Ia31458e8f8399a1bf7694a6a12ee9fa533252f3f